--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Fabien Rouault
-logo: /assets/img/logo.png
+logo: /assets/img/IMG_0492.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
