--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Fabien Rouault
-logo: /assets/img/IMG_0492.jpg
+logo: /assets/img/Photo_profil.png
 description: >
 
 <a href= "www.linkedin.com/in/fabien-rouault-b9430725"> My LinkedIn Profile </a>
