--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 title: Fabien Rouault
 logo: /assets/img/Photo_profil.png
 description: 
-<a href="www.linkedin.com/in/fabien-rouault-b9430725"> My LinkedIn Profile </a>
-# <br><br>
-# <a href= "https://www.researchgate.net/profile/Fabien-Rouault-2"> My ResearchGate Profile </a>
+<p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
+  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  </p>
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
