--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Fabien Rouault
 logo: /assets/img/Photo_profil.png
-description: 
-<p align="center">
+description: <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
   <a href="https://github.com/chriskhanhtran">GitHub</a>
