--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Fabien Rouault
 logo: /assets/img/Photo_profil.png
-description: <p align="center">
-  <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
-  <a href="https://github.com/chriskhanhtran">GitHub</a>
+description: <p align="left">
+  
+  <a href="https://fr.linkedin.com/in/fabien-rouault-b9430725/">View My LinkedIn Profile</a> |
+  <a href="https://www.researchgate.net/profile/Fabien-Rouault-2">View My ResearchGate Profile</a>
   </p>
 show_downloads: false
 google_analytics:
