--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Fabien Rouault
 logo: /assets/img/Photo_profil.png
 description: <p align="left"> 
-  <a href="https://fr.linkedin.com/in/fabien-rouault-b9430725/">View My LinkedIn Profile</a> <br> 
+  <a href="https://fr.linkedin.com/in/fabien-rouault-b9430725/">View My LinkedIn Profile</a> <br> <br>
   <a href="https://www.researchgate.net/profile/Fabien-Rouault-2">View My ResearchGate Profile</a> <br> 
   </p>
 show_downloads: false
